--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,8 @@
 
   --danger: #FF5959;
 
+  --transparent: #ffffff00;
+
   --input-base: #1C1F21;
   --input-stroke: #363B40;
   --input-placeholder: #869198;
