--- a/styles/event.css
+++ b/styles/event.css
@@ -98,10 +98,12 @@
       color: var(--text-body);
       cursor: pointer;
     }
+  }
 
-
-
-    
+  @media (max-width: 900px) {
+    #media-resposively-grid {
+      display: grid;
+    }
   }
 
   textarea {
