--- a/styles/custom.css
+++ b/styles/custom.css
@@ -103,6 +103,13 @@
 }
 
 #event-theme-container {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 2vw;
+  margin-block: 1rem 1.75rem;
+  width: 100%;
+  place-content: space-between;
+
   & .card-theme {
     width: 8.375rem;
     height: 6.4375rem;
