--- a/styles/index.css
+++ b/styles/index.css
@@ -2,5 +2,5 @@
 @import url(brand.css);
 @import url(invite-global.css);
 @import url(event.css);
-@import url(fieldsets.css);
 @import url(custom.css);
+@import url(info.css);
