--- a/styles/custom.css
+++ b/styles/custom.css
@@ -26,6 +26,7 @@
     
     
     & input {
+      
       border-radius: 50%;
       width: calc(100% - 4px);
       height: calc(100% - 4px);
@@ -35,11 +36,13 @@
       border: none;
       margin: 0;
       align-items: center;
+    }
 
-      &:focus {
-       outline: 2px solid #3996DB; 
-       outline-offset: .1px; 
-      } 
+    &:has(:checked) {
+      & input {
+        outline: 2px solid #3996DB; 
+        outline-offset: .1px;
+      }
     }
   
     & #blue-cicle {
@@ -138,11 +141,8 @@
       border-radius: 0.4rem;
       position: absolute;
       cursor: pointer;
-
-      &:focus {
-        outline-width: 2px;
-      }
     }
+  
 
     & img {
       filter: none;
@@ -158,6 +158,13 @@
     & label {
       position: absolute;
       top: 74%; 
+    }
+
+    &:has(:checked) {
+      & input {
+        outline: 2px solid #3996DB; 
+        outline-offset: .1px;  
+      }
     }
   }
 }
@@ -248,9 +255,12 @@
       border-radius: 6px;
       background-color: var(--shape-button);
 
+      &:hover {
+        background-color: var(--shape-hover);
+      }
       
-
       & input {
+        
         margin: 0;
         position: absolute;
         width: 100%;
@@ -258,31 +268,29 @@
         border: none;
         border: 1px solid red;
         background-color: var(--shape-button);
-        display: none;
         z-index: 1;
-
-        &:hover {
-          cursor: pointer;
-        }
+        opacity: 0;
+        cursor: pointer;
+        display:inline-block;
+        
       }
 
       & img {
         width: 1rem;
         height: 1rem;
+        filter: brightness(0) saturate(100%) invert(71%) sepia(21%) saturate(5764%) hue-rotate(181deg) brightness(100%) contrast(102%);
         /* margin-inline: 0.5rem; */
       }
 
       & label {
         font: var(--body-sm-semibold);
         color: var(--text-heading);
-        /* width: 100%; */
-        /* height: 100%; */
+        z-index: 1;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
 
-        &:hover {
-          cursor: pointer;
-        }
       }
-
     }
 
     & span {
