--- a/styles/info.css
+++ b/styles/info.css
@@ -29,3 +29,12 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  & #info {
+    .responsively-email-container {
+      display: grid ;
+      gap: 0rem;
+    }
+  } 
+}
