--- a/styles/custom.css
+++ b/styles/custom.css
@@ -205,7 +205,7 @@
         & label:after {
           content: '';
           position: absolute;
-          top: 0.15rem;
+          top: 10%;
           left: 0.2rem;
           width: 1.5rem;
           height: 1.5rem;
