--- a/styles/custom.css
+++ b/styles/custom.css
@@ -205,12 +205,12 @@
         & label:after {
           content: '';
           position: absolute;
-          top: 0.15rem;
+          top: 10%;
           left: 0.2rem;
           width: 1.5rem;
           height: 1.5rem;
           background: var(--input-stroke);
-          border-radius: 90px;
+          border-radius: 50%;
           transition: 0.3s;
         }
         
