--- a/styles/custom.css
+++ b/styles/custom.css
@@ -289,8 +289,8 @@
         align-items: center;
         justify-content: center; 
         margin: 0;
+        padding: 0.75rem;
         position: absolute;
-        width: 100%;
         height: 100%;
         border-radius: 0.5rem;
         background-color: var(--shape-button);
